core-apps/base/calico/gnp_master.yaml
# https://projectcalico.docs.tigera.io/security/kubernetes-nodes

# The ingress policy below contains three rules. The first rule allows access to the API server port from anywhere. 
# The second rule allows all traffic to localhost, which allows Kubernetes to access control plane processes. 
# These control plane processes includes the etcd server client API, the scheduler, and the controller-manager. 
# This rule also allows localhost access to the kubelet API and calico/node health checks. 
# And the final rule allows the etcd pods to peer with each other and allows the masters to access each others kubelet API.

apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: k8s-master
spec:
  selector: "role == 'master-all-int'"
  order: 50
  ingress:
  # This rule allows ingress to the Kubernetes API server.
  - action: Allow
    protocol: TCP
    destination:
      ports:
      # kube API server
      - 6443
  # This rule allows all traffic to localhost.
  - action: Allow
    destination:
      nets:
      - 127.0.0.0/8
  # This rule is required in multi-master clusters where etcd pods are colocated with the masters.
  # Allow the etcd pods on the masters to communicate with each other. 2380 is the etcd peer port.
  # This rule also allows the masters to access the kubelet API on other masters (including itself).
  - action: Allow
    protocol: TCP
    source:
      selector: "role == 'master-all-int'"
    destination:
      ports:
      - 2380
      - 10250
  egress:
  - action: Allow
